builtin run names

--- a/deepacvir/builtin/config/nn-vhdb-sensitive-lstm.ini
+++ b/deepacvir/builtin/config/nn-vhdb-sensitive-lstm.ini
@@ -101,7 +101,7 @@ ValidationData = ./val_data.npy
 # Path to validation labels
 ValidationLabels = ./val_labels.npy
 # A prefix used for the model and output files
-RunName = img-sensitive-lstm
+RunName = vhdb-sensitive-lstm
 
 [Training]
 # First epoch (1-indexed)
