--- a/deepacvir/builtin/config/nn-vhdb-rapid-cnn.ini
+++ b/deepacvir/builtin/config/nn-vhdb-rapid-cnn.ini
@@ -101,7 +101,7 @@ ValidationData = ./val_data.npy
 # Path to validation labels
 ValidationLabels = ./val_labels.npy
 # A prefix used for the model and output files
-RunName = img-rapid-cnn
+RunName = vhdb-rapid-cnn
 
 [Training]
 # First epoch (1-indexed)
