--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md
-include deepac/builtin/config/*
-include deepac/builtin/weights/*
+include deepacvir/builtin/config/*
+include deepacvir/builtin/weights/*
