--- a/deepacvir/builtin/config/nn-vhdb-sensitive-lstm.ini
+++ b/deepacvir/builtin/config/nn-vhdb-sensitive-lstm.ini
@@ -30,6 +30,14 @@ BatchQueue = 128
 [InputData]
 # Read length
 SeqLength = 250
+# Use subreads
+UseSubreads = False
+# Min subread length (closed interval [min,max])
+MinSubreadLength = 50
+# Max subread length (closed interval [min,max])
+MaxSubreadLength = 250
+# Subread length distribution (not implemented)
+DistSubread = uniform
 
 [Architecture]
 # Reverse complement architecture. none (no RC), siam (separate flow for each strand) or full (full RC mode)
